syntax = "proto3";
package umee.leverage.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/umee-network/umee/v2/x/leverage/types";

// Msg defines the x/leverage module's Msg service.
service Msg {
  // LendAsset defines a method for lending coins to the capital facility.
  rpc LendAsset(MsgLendAsset) returns (MsgLendAssetResponse);

  // WithdrawAsset defines a method for withdrawing previously loaned coins from
  // the capital facility.
  rpc WithdrawAsset(MsgWithdrawAsset) returns (MsgWithdrawAssetResponse);

  // AddCollateral defines a method for users to enable selected uTokens
  // as collateral.
  rpc AddCollateral(MsgAddCollateral) returns (MsgAddCollateralResponse);

  // RemoveCollateral defines a method for users to disable selected uTokens
  // as collateral.
  rpc RemoveCollateral(MsgRemoveCollateral) returns (MsgRemoveCollateralResponse);

  // BorrowAsset defines a method for borrowing coins from the capital facility.
  rpc BorrowAsset(MsgBorrowAsset) returns (MsgBorrowAssetResponse);

  // RepayAsset defines a method for repaying borrowed coins to the capital
  // facility.
  rpc RepayAsset(MsgRepayAsset) returns (MsgRepayAssetResponse);

  // Liquidate defines a method for repaying a different user's borrowed coins
  // to the capital facility in exchange for some of their collateral.
  rpc Liquidate(MsgLiquidate) returns (MsgLiquidateResponse);
}

// MsgLendAsset represents a lender's request to lend a base asset type to the
// module.
message MsgLendAsset {
  // Lender is the account address supplying assets and the signer of the message.
  string                   lender = 1;
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

// MsgWithdrawAsset represents a lender's request to withdraw lent assets.
// Amount must be a uToken.
message MsgWithdrawAsset {
  // Lender is the account address withdrawing assets and the signer of the message.
  string                   lender = 1;
  cosmos.base.v1beta1.Coin amount = 2 [(gogoproto.nullable) = false];
}

// MsgAddCollateral represents a lender's request to enable selected
// uTokens as collateral.
message MsgAddCollateral {
  // Borrower is the account address adding collateral and the signer of the message.
  string                   borrower = 1;
  cosmos.base.v1beta1.Coin coin     = 2 [(gogoproto.nullable) = false];
}

// MsgRemoveCollateral represents a lender's request to disable selected
// uTokens as collateral.
message MsgRemoveCollateral {
  // Borrower is the account address removing collateral and the signer of the message.
  string                   borrower = 1;
  cosmos.base.v1beta1.Coin coin     = 2 [(gogoproto.nullable) = false];
}

// MsgBorrowAsset represents a lender's request to borrow a base asset type
// from the module.
message MsgBorrowAsset {
  // Borrower is the account address taking a loan and the signer
  // of the message.
  string                   borrower = 1;
  cosmos.base.v1beta1.Coin amount   = 2 [(gogoproto.nullable) = false];
}

// MsgRepayAsset represents a lender's request to repay a borrowed base asset
// type to the module.
message MsgRepayAsset {
  // Borrower is the account address repaying a loan and the signer
  // of the message.
  string                   borrower = 1;
  cosmos.base.v1beta1.Coin amount   = 2 [(gogoproto.nullable) = false];
}

// MsgLiquidate represents a liquidator's request to repay a specific borrower's
// borrowed base asset type to the module in exchange for collateral reward.
message MsgLiquidate {
  // Liquidator is the account address performing a liquidation and the signer
  // of the message.
  string                   liquidator = 1;
  string                   borrower   = 2;
  cosmos.base.v1beta1.Coin repayment  = 3 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin reward     = 4 [(gogoproto.nullable) = false];
}

// MsgLendAssetResponse defines the Msg/LendAsset response type.
message MsgLendAssetResponse {}

// MsgWithdrawAssetResponse defines the Msg/WithdrawAsset response type.
message MsgWithdrawAssetResponse {}

// MsgAddCollateralResponse defines the Msg/AddCollateral response type.
message MsgAddCollateralResponse {}

// MsgRemoveCollateralResponse defines the Msg/RemoveCollateral response type.
message MsgRemoveCollateralResponse {}

// MsgBorrowAssetResponse defines the Msg/BorrowAsset response type.
message MsgBorrowAssetResponse {}

// MsgRepayAssetResponse defines the Msg/RepayAsset response type.
message MsgRepayAssetResponse {
  cosmos.base.v1beta1.Coin repaid = 1 [(gogoproto.nullable) = false];
}

// MsgLiquidateResponse defines the Msg/Liquidate response type.
message MsgLiquidateResponse {
  cosmos.base.v1beta1.Coin repaid = 1 [(gogoproto.nullable) = false];
  cosmos.base.v1beta1.Coin reward = 2 [(gogoproto.nullable) = false];
}
